<resources>
    <string name="app_name">Stranger Color</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="quit">Quit</string>


    <string name="score">Score</string>
    <string name="best_score">Best Score</string>

    <string name="game_over">Game Over</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit_msg">Quit the Game ?</string>

    <string name="tap_to_start">Tap to Start</string>
    <string name="tap_to_restart">Tap to Restart</string>

    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="grey">Grey</string>


</resources>
