<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="80dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#f1666a"
        android:textSize="26sp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/easy"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/normal"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/hard"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/quit"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"/>


</LinearLayout>
